Fix spacing issue on home page

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 2% 0;
+  padding: 4% 0;
 }
 
 .homepg-nav-btn {
